# djangocon_2022-django-types-pyright

./: .gitignore  README.md  pyproject.toml  pyrightconfig-ci.json
app/: models.py  settings.py  utils.py  views.py
app/migrations/: 0001_initial.py
